--- a/monolith/build.gradle
+++ b/monolith/build.gradle
@@ -4,9 +4,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.optivem.atddaccelerator.template.monolith'
+group = 'com.ognjen.budgetok.template.monolith'
 version = '0.0.1-SNAPSHOT'
-description = 'ATDD Accelerator Template - Monolith'
+description = 'ATDD Budget OK - Monolith'
 
 java {
 	toolchain {
