--- a/.github/actions/deploy-docker-images/action.yml
+++ b/.github/actions/deploy-docker-images/action.yml
@@ -56,19 +56,17 @@ runs:
     - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        java-version: 17
+        java-version: 25
         distribution: temurin
+        cache: maven
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.0.0
-    
-    - name: Make Gradle Wrapper executable
-      run: chmod +x ./gradlew
+    - name: Make Maven Wrapper executable
+      run: chmod +x ./mvnw
       shell: bash
       working-directory: system-test
         
     - name: Run Smoke Tests
-      run: ./gradlew test --tests com.ognjen.budgetok.template.systemtest.smoketests.*
+      run: ./mvnw test -Dtest="com.optivem.atddaccelerator.template.systemtest.smoketests.**"
       shell: bash
       working-directory: system-test
 
