--- a/.github/workflows/acceptance-stage.yml
+++ b/.github/workflows/acceptance-stage.yml
@@ -83,14 +83,12 @@ jobs:
     - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        java-version: 21
+        java-version: 25
         distribution: temurin
-
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.0.0
+        cache: maven
     
-    - name: Make Gradle Wrapper executable
-      run: chmod +x ./gradlew
+    - name: Make Maven Wrapper executable
+      run: chmod +x ./mvnw
       working-directory: system-test
 
     - name: Run Acceptance Tests
@@ -100,7 +98,7 @@ jobs:
       run: echo "Run External System Contract Tests"
 
     - name: Run E2E Tests
-      run: ./gradlew test --tests com.ognjen.budgetok.template.systemtest.e2etests.*
+      run: ./mvnw test -Dtest="com.optivem.atddaccelerator.template.systemtest.e2etests.**"
       working-directory: system-test
   
   prerelease:
