--- a/.github/workflows/commit-stage-monolith.yml
+++ b/.github/workflows/commit-stage-monolith.yml
@@ -24,7 +24,6 @@ jobs:
     outputs:
       image-latest-url: ${{ steps.publish.outputs.image-latest-url }}
       image-digest-url: ${{ steps.publish.outputs.image-digest-url }}
-      image-created-timestamp: ${{ steps.publish.outputs.image-created-timestamp }}
 
     permissions:
       contents: read
@@ -37,19 +36,16 @@ jobs:
     - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        java-version: 17
+        java-version: 25
         distribution: temurin
-
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.0.0
+        cache: maven
     
-    - name: Make Gradle Wrapper executable
-      run: chmod +x ./gradlew
-      shell: bash
+    - name: Make Maven Wrapper executable
+      run: chmod +x ./mvnw
       working-directory: monolith
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+    - name: Build with Maven
+      run: ./mvnw clean package
       working-directory: monolith
 
     - name: Publish Docker Image
