--- a/monolith/Dockerfile
+++ b/monolith/Dockerfile
@@ -1,8 +1,8 @@
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:25-jdk-alpine
 
 WORKDIR /app
 
-COPY build/libs/*.jar app.jar
+COPY target/*.jar app.jar
 
 EXPOSE 8080
 
