--- a/monolith/pom.xml
+++ b/monolith/pom.xml
@@ -12,7 +12,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.optivem.atddaccelerator.template.monolith</groupId>
+    <groupId>com.ognjen.template.monolith</groupId>
     <artifactId>monolith</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
