--- a/.github/workflows/acceptance-stage.yml
+++ b/.github/workflows/acceptance-stage.yml
@@ -98,7 +98,7 @@ jobs:
       run: echo "Run External System Contract Tests"
 
     - name: Run E2E Tests
-      run: ./mvnw test -Dtest="com.optivem.atddaccelerator.template.systemtest.e2etests.**"
+      run: ./mvnw test -Dtest="com.ognjen.template.systemtest.e2etests.**"
       working-directory: system-test
   
   prerelease:
