feat: add transfer functionality with Bank OK integration and E2E tests

--- a/monolith/src/main/resources/application.yml
+++ b/monolith/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
 todos:
   api:
     host: ${TODOS_API_HOST:https://jsonplaceholder.typicode.com}
+
+bankok:
+  api:
+    host: ${BANKOK_API_HOST:https://dummyjson.com}
