test: pass e2e test to external bank ok

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
 
+# Bank OK external API configuration
+bankok:
+  api:
+    host: ${BANKOK_API_HOST:https://dummyjson.com}
+
 # Actuator configuration
 management:
   endpoints:
