--- a/.github/workflows/commit-stage-frontend.yml
+++ b/.github/workflows/commit-stage-frontend.yml
@@ -38,6 +38,7 @@ jobs:
       with:
         node-version: '20'
         cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
 
     - name: Install Dependencies
       run: npm ci
