--- a/.github/workflows/acceptance-stage.yml
+++ b/.github/workflows/acceptance-stage.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
-    - name: Deploy System
+    - name: Deploy System & Run Smoke Tests
       id: deploy-system
       uses: ./.github/actions/deploy-docker-images
       with:
@@ -81,25 +81,23 @@ jobs:
         version: latest
         image-urls: ${{ needs.find-latest-images.outputs.image-digest-urls }}
 
-    - name: Setup Java
+    - name: Setup Java for E2E Tests
       uses: actions/setup-java@v4
       with:
         java-version: 25
         distribution: temurin
         cache: maven
-    
+
     - name: Make Maven Wrapper executable
       run: chmod +x ./mvnw
       working-directory: system-test
 
-    - name: Run Acceptance Tests
-      run: echo "Run Acceptance Tests"
-
-    - name: Run External System Contract Tests
-      run: echo "Run External System Contract Tests"
-
     - name: Run E2E Tests
       run: ./mvnw test -Dtest="com.ognjen.template.systemtest.e2etests.**"
+      working-directory: system-test
+
+    - name: Run External API Contract Tests
+      run: ./mvnw test -Dtest="com.ognjen.template.systemtest.smoketests.ExternalIoSmokeTest"
       working-directory: system-test
   
   prerelease:
