--- a/system-test/docker-compose.yml
+++ b/system-test/docker-compose.yml
@@ -19,9 +19,14 @@ services:
   frontend:
     image: ghcr.io/ognjenkl/budget-ok-web/frontend:latest
     ports:
-      - "80:80"
+      - "5173:80"
     depends_on:
       - backend
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     image: ghcr.io/ognjenkl/budget-ok-backend/backend:latest
