--- a/.github/workflows/acceptance-stage.yml
+++ b/.github/workflows/acceptance-stage.yml
@@ -37,6 +37,7 @@ jobs:
         image-urls: |
           ghcr.io/${{ github.repository_owner }}/budget-ok-web/frontend:latest
           ghcr.io/${{ github.repository_owner }}/budget-ok-backend/backend:latest
+          ghcr.io/${{ github.repository_owner }}/bank-ok-repo/bank-ok:latest
 
   should-run:
     needs: find-latest-images
