--- a/.github/workflows/qa-stage.yml
+++ b/.github/workflows/qa-stage.yml
@@ -41,6 +41,7 @@ jobs:
           base-image-urls: |
             ghcr.io/${{ github.repository_owner }}/budget-ok-web/frontend
             ghcr.io/${{ github.repository_owner }}/budget-ok-backend/backend
+            ghcr.io/${{ github.repository_owner }}/bank-ok-repo/bank-ok:latest
 
   deployment:
     needs: [check-release-exists, resolve-docker-images]
