--- a/system-test/docker-compose.yml
+++ b/system-test/docker-compose.yml
@@ -28,6 +28,16 @@ services:
       timeout: 5s
       retries: 5
 
+  bank-ok:
+    image: ghcr.io/ognjenkl/bank-ok-repo/bank-ok:latest
+    ports:
+      - "8081:8081"
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
     image: ghcr.io/ognjenkl/budget-ok-backend/backend:latest
     ports:
@@ -36,8 +46,11 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/budgetok
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      BANKOK_HOST: http://bank-ok:8080
     depends_on:
       db:
+        condition: service_healthy
+      bank-ok:
         condition: service_healthy
 
 volumes:
