--- a/system-test/docker-compose.yml
+++ b/system-test/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     ports:
       - "8081:8081"
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8081/"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8081/api/expenses"]
       interval: 10s
       timeout: 5s
       retries: 5
