--- a/.github/actions/deploy-docker-images/action.yml
+++ b/.github/actions/deploy-docker-images/action.yml
@@ -48,7 +48,7 @@ runs:
     - name: Wait for Bank OK to be Ready
       uses: optivem/wait-for-docker-compose-action@v1
       with:
-        url: 'http://localhost:8081/'
+        url: 'http://localhost:8081/api/expenses'
         max-attempts: '30'
         wait-seconds: '10'
         working-directory: system-test
