fix: correct bank-ok environment variable name and port configuration

--- a/system-test/docker-compose.yml
+++ b/system-test/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/budgetok
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
-      BANK_OK_HOST: http://bank-ok:8081
+      BANKOK_API_HOST: http://bank-ok:8081
     depends_on:
       db:
         condition: service_healthy
